# course-automated-reasoning

./: README.md  job_scheduling.py  program_correctness.py  pyproject.toml  sudoku_variant.py
magic_trucks/: magick_trucks.py  magick_trucks_1.smt2  magick_trucks_2.smt2
