[tool.poetry]
name = "course-automated-reasoning"
version = "0.1.0"
description = "Solutions to coursera course on automated reasoning using SMT technology"
authors = ["Josep Pon Farreny"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
z3-solver = "^4.8.17"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
